[project]
name = "polars-docs-mcp"
version = "0.1.0"
description =  "A FastMCP tool to search and retrieve Polars API documentation."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "ABC", email = "abc@abhishekchoudhary.net" }
]
keywords = ["polars", "mcp", "documentation", "api"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "polars>=1.30.0",
    "fastmcp>=2.5.0",
]

[tool.setuptools]
py-modules = ["polarsdocsfinder"]

[project.urls]
Homepage = "https://github.com/HotTechStack/polars-docs-mcp"
Repository = "https://github.com/HotTechStack/polars-docs-mcp.git"
Documentation = "https://github.com/HotTechStack/polars-docs-mcp#readme"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
